--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
 .App {
   text-align: center;
+  display: flex;
+}
+.Foot{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img{
+  max-height: 200px;
+  max-width: 200px;
+}
+
+.foot-block{
+  display: flex;
+  width: 50%;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
 }
